** 2.2.1 released on 2011-04-28

2011-04-28  Petr Stehlik <pstehlik@sophics.cz>
* configure.ac: generalization for sound configuration

* ui.c, videomode.c, sdl/input.c: slight optimization for snprintf()

* monitor.c, rdevice.c, screen.[ch], sio.c, ui.c, ui_basic.c, util.c,
  videomode.c: replace unsafe sprintf() with snprintf()

* sdl/input.c: fix for over-optimized LPT TRIG, sprintf() removed

* README.1ST, atari800.spec, DOC/README, DOC/NEWS, atari.h, util/export:
  updated for a new release


2011-04-27  Petr Stehlik <pstehlik@sophics.cz>
* DOC/ChangeLog: blank lines added, "src/" from filenames removed

* ide.c: fixes for IDE emulation from Ivo <ivop@euronet.nl> - fix for
  8-bit mode with an odd number of reads and adds a command line option
  for enabling CF mode (slightly different from normal HD mode)

* configure.ac: fixes non-SDL sound (example: X11 target) for Linux and BeOS
  and also adds support for SDL sound on Falcon and other platforms
  (like for example *BSD, which should fix the Debian Atari800 package)

* debian/*: updated for a new release, dropping non-SDL binary packages.


2011-04-23  Kostas Nakos  <knakos@gmail.com>
* android/*: Speed up fileselector on orientation update & bugfix mount/insert


2011-04-22  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* sdl/input.c: Allow using SDL/LPT joysticks together with keyboard
  joysticks. Previously if a user had a joystick connected, keyboard
  joysticks were ignored.

* sdl/video.c, sdl/video_gl.c: Rework the resolution of the segfault
  when switching between software<->OpenGL in Windows - now it always
  reinitialises the video subsystem. The previous solution would later cause
  glitches when rapidly resizing the OpenGL window.

* sdl/main.c, sdl/input.c: Delay processing of repeated window resize
  requests on Windows to avoid a bug in SDL.


2011-04-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* ui_basic.c: Fix division by 0 in the slider control.
